--- a/trial_1.ipynb
+++ b/trial_1.ipynb
@@ -262,7 +262,7 @@
     "    df = df.append(job.__dict__, ignore_index=True)\n",
     "df = df[['company', 'job_title', 'is_full_time', 'original_link', 'is_remote', 'job_location']]\n",
     "todays_date = f'{datetime.datetime.now():%d-%m-%Y-%H-%M}'\n",
-    "csv_filename = str(todays_date) +\".csv\"\n",
+    "csv_filename = \"indeed-\" + str(todays_date) +\".csv\"\n",
     "df.to_csv(os.path.expanduser(f'~/Downloads/{csv_filename}'))"
    ]
   },
