--- a/trial_1.ipynb
+++ b/trial_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,38 +156,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-3-0886c147471f>:18: DeprecationWarning: use options instead of chrome_options\n",
+      "  driver = webdriver.Chrome(executable_path=driver_type, chrome_options=options)\n"
+     ]
+    }
+   ],
    "source": [
     "page = get_soup(url)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-3-0886c147471f>:18: DeprecationWarning: use options instead of chrome_options\n",
+      "  driver = webdriver.Chrome(executable_path=driver_type, chrome_options=options)\n"
+     ]
+    }
+   ],
    "source": [
     "pages = parse_all_pages(page)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-3-0886c147471f>:18: DeprecationWarning: use options instead of chrome_options\n",
+      "  driver = webdriver.Chrome(executable_path=driver_type, chrome_options=options)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "we got 13 job postings\n"
+     ]
+    }
+   ],
    "source": [
     "soups = get_all_soups(pages)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -260,7 +294,7 @@
     "    job.is_full_time = parse_working_time(soup)\n",
     "    job.job_location, job.is_remote = parse_job_location(soup)\n",
     "    df = df.append(job.__dict__, ignore_index=True)\n",
-    "df = df[['company', 'job_title', 'is_full_time', 'original_link', 'is_remote', 'job_location']]\n",
+    "df = df[['company', 'job_title', 'job_location', 'original_link', 'is_full_time','is_remote']]\n",
     "todays_date = f'{datetime.datetime.now():%d-%m-%Y-%H-%M}'\n",
     "csv_filename = \"indeed-\" + str(todays_date) +\".csv\"\n",
     "df.to_csv(os.path.expanduser(f'~/Downloads/{csv_filename}'))"
